# ABBA

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ABBA_ALIGN_IMPLEMENTATION_SUMMARY.md  ABBA_ALIGN_README.md  AUTO_MODEL_SELECTION.md  CHECKLIST.md  CLAUDE.md  CLI_IMPLEMENTATION_COMPLETE.md  COVERAGE_ANALYSIS_STATUS.md  COVERAGE_VALIDATION_COMPLETE.md  DEVELOPMENT_STATUS.md  ENHANCED_CLI_COMPLETE.md  ENHANCED_MODELS_COMPLETE.md  ENRICHMENT_COVERAGE_ANALYSIS.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_TEST_SUMMARY.md  GREEK_ALIGNMENT_DEBUG_SUMMARY.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPORT_ERROR_FIX.md  LICENSE  MANUSCRIPT_TEST_FIXES.md  MODEL_DISCOVERY_QUICK_REFERENCE.md  Makefile  README.md  SCRIPTS_ORGANIZATION.md  STRONGS_HEBREW_FIX_COMPLETE.md  STRONGS_INTEGRATION_COMPLETE.md  UNICODE_UTILS_FIX_SUMMARY.md  WORD_ALIGNMENT_IMPLEMENTATION.md  WORKING_FEATURES.md  abba-align  alignment_coverage_report.md  analyze_coverage.py  analyze_modern_training_data.py  bible.json  build_with_claude.py  (+27 more)
claude_scripts/: analyze_json_extraction.py  compare_alignment_methods.py  debug_cross_refs.py  debug_loader.py  demo_coverage_analysis.py  demo_final_enhanced.py  demonstrate_alignment.py  demonstrate_enhanced_alignment.py  demonstrate_enhanced_processing.py  demonstrate_strongs_alignment.py  demonstrate_working_features.py  final_test_summary.py  fix_enrichment_coverage.py  generate_coverage_summary.py  identify_test_issues.py  test_alignment_coverage.py  test_alignment_ensemble.py  test_enhanced_coverage.py  test_enhanced_processor.py  test_enhanced_simple.py  test_morph_only.py  test_new_alignment.py  test_single_translation_coverage.py  test_status_check.py  update_coverage_to_use_enhanced.py  validate_alignment_coverage.py  validate_model_extraction.py
docs/: ALGORITHM_VISUALS.md  ALIGNMENT_COVERAGE_VALIDATION.md  API.md  ARCHITECTURE.md  AUTOMATIC_ANNOTATIONS.md  CANONICAL_FORMAT.md  CODE_QUALITY.md  COVERAGE_ANALYSIS_GUIDE.md  DATA_FLOW_AND_ALGORITHMS.md  DATA_INTEGRITY.md  ENHANCED_ALIGNMENT_METHODOLOGY.md  ENHANCED_ALIGNMENT_SYSTEM.md  IMPLEMENTATION_ROADMAP.md  MODEL_SELECTION_GUIDE.md  MODERN_ALIGNMENT_ARCHITECTURE.md  MODERN_ALIGNMENT_SETUP.md  MODERN_ALIGNMENT_STACK.md  PHASE_1_1_IMPLEMENTATION.md  PHASE_7_COMPLETION.md  QUICK_START.md  SEARCH_METHODOLOGY.md  STRONGS_ALIGNMENT_SYSTEM.md  USER_GUIDE.md
examples/: canonical_sample.json  example_bible.json  full_bible_export.py  simple_export.py
my_alignments/: report.json
scripts/: README.md  analyze_all_translations_coverage.py  analyze_enrichment_coverage.py  create_corpus_files.py  create_enhanced_models.py  create_manual_alignments.py  demonstrate_enhanced_alignment.py  development_progress_summary.py  download_sources.py  evaluate_alignments.py  extract_from_sqlite.py  iterative_alignment_pipeline.py  load_full_strongs_concordance.py  prepare_parallel_corpus.py  run_coverage_analysis.py  train_all_models.py  train_enhanced_alignment.py  train_full_corpus.py  train_hybrid_alignment.py  train_modern_alignment.py  train_statistical_alignment.py  train_word_alignment.py  validate_modern_alignment.py  validate_pipeline.py
src/: README.md  abba_coverage_analyzer.py  abba_data_downloader.py  main.py  modern_alignment_system.py
tests/: __init__.py  test_annotations.py  test_book_codes.py  test_bridge_tables.py  test_canon_comparison.py  test_canon_models.py  test_canon_registry.py  test_canon_service.py  test_canon_support.py  test_canon_translation.py  test_canon_versification.py  test_export_base.py  (+49 more)
(+119 files in other folders)
