[tool.poetry]
name = "abba"
version = "0.1.0"
description = "Annotated Bible and Background Analysis - A comprehensive data format for biblical texts with annotations"
authors = ["jhenderson"]
license = "MIT"
readme = "README.md"
packages = [{include = "abba", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
python-dotenv = "^1.0.0"
# Modern NLP libraries for alignment
spacy = "^3.7.0"
sentence-transformers = "^2.2.0"
scikit-learn = "^1.4.0"
nltk = "^3.8.0"
torch = "^2.1.0"
# Statistical analysis
scipy = "^1.12.0"
pandas = "^2.2.0"
# Utilities
tqdm = "^4.66.0"
numpy = "^1.26.0"
# Phase 4: Annotation & Tagging dependencies
transformers = "^4.36.0"
umap-learn = "^0.5.4"
hdbscan = "^0.8.33"
# Core biblical data dependencies
typer = {extras = ["all"], version = "^0.15.1"}
lxml = "^5.3.0"
pydantic = "^2.10.4"
jsonschema = "^4.23.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pylint = "^3.0.0"
flake8 = "^7.0.0"
isort = "^5.13.0"
bandit = {extras = ["toml"], version = "^1.7.0"}
vulture = "^2.10"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
coverage = {extras = ["toml"], version = "^7.4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.messages_control]
max-line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["src/abba"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]

[tool.vulture]
paths = ["src/abba"]
min_confidence = 80
